--- a/table-mdn/index.html
+++ b/table-mdn/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 	<h1>Table Practice</h1>
-	<h2>Dogs Table</h2>
+	<h2>Dogs Table - table, tr, th, td</h2>
 	<table>
+
 	  <tr>
 	    <td></td>
 	    <th>Knocky</th>
@@ -47,10 +48,11 @@
 	  </tr>
 	</table>
 
-	<h2>Animals table</h2>
+	<h2>Animals table - colspan, rowspan</h2>
 	<table>
+
 		<tr>
-			<th>Animals</th>
+			<th colspan="2">Animals</th>
 		</tr>
 		<tr>
 			<th colspan="2">Hippopotamus</th>
@@ -71,6 +73,74 @@
 		</tr>
 		<tr>
 			<td>Rooster</td>
+		</tr>
+	</table>
+
+	<h2>School timetable - colgroup, col</h2>
+	<table>
+
+		<colgroup>
+			<col span="2">
+			<col style="background-color:#97DB9A">
+			<col style="width: 42px">
+			<col style="background-color: #97DB9A">
+			<col style="background-color:#DCC48E; border:4px solid #C1437A">
+			<col>
+		</colgroup>
+
+		<tr>
+			<td></td>
+			<th>Mon</th>
+			<th>Tues</th>
+			<th>Wed</th>
+			<th>Thurs</th>
+			<th>Fri</th>
+			<th>Sat</th>
+			<th>Sun</th>
+		</tr>
+
+		<tr>
+			<th>1st period</th>
+			<td>English</td>
+			<td></td>
+			<td></td>
+			<td>German</td>
+			<td>Dutch</td>
+			<td></td>
+			<td></td>
+		</tr>
+
+		<tr>
+			<th>2nd period</th>
+			<td>English</td>
+			<td>English</td>
+			<td></td>
+			<td>German</td>
+			<td>Dutch</td>
+			<td></td>
+			<td></td>
+		</tr>
+
+		<tr>
+			<th>3rd period</th>
+			<td></td>
+			<td>German</td>
+			<td></td>
+			<td>German</td>
+			<td>Dutch</td>
+			<td></td>
+			<td></td>
+		</tr>
+
+		<tr>
+			<th>4th period</th>
+			<td></td>
+			<td>English</td>
+			<td></td>
+			<td>English</td>
+			<td>Dutch</td>
+			<td></td>
+			<td></td>
 		</tr>
 	</table>
 
