Added 'Solar system' table

--- a/table-mdn/index.html
+++ b/table-mdn/index.html
@@ -76,6 +76,71 @@
 		</tr>
 	</table>
 
+	<h2>Solar System - colspan, rowspan</h2>
+	<table>
+		<tr>
+			<th colspan="3">Solar system</th>
+		</tr>
+
+		<tr>
+			<th colspan="3">Stars</th>
+		</tr>
+
+		<tr>
+			<th colspan="2">Yellow dwarf</th>
+			<td>Sun</td>
+		</tr>
+
+		<tr>
+			<th colspan="3">Planets</th>
+		</tr>
+
+		<tr>
+			<th colspan="2" rowspan="4">Terrestrial</th>
+			<td>Mercury</td>
+		</tr>
+
+		<tr>
+			<td>Venus</td>
+		</tr>
+
+		<tr>
+			<td>Earth</td>
+		</tr>
+
+		<tr>
+			<td>Mars</td>
+		</tr>
+
+		<tr>
+			<th rowspan="7">Giants</th>
+		</tr>
+
+		<tr>
+			<th rowspan="3">Gas</th>
+		</tr>
+
+		<tr>
+			<td>Jupiter</td>
+		</tr>
+
+		<tr>
+			<td>Saturn</td>
+		</tr>
+
+		<tr>
+			<th rowspan="3">Ice</th>
+		</tr>
+
+		<tr>
+			<td>Uranus</td>
+		</tr>
+
+		<tr>
+			<td>Neptune</td>
+		</tr>
+	</table>
+
 	<h2>School timetable - colgroup, col</h2>
 	<table>
 
