Styling tables article. Reviewing notes

--- a/table-mdn/index.html
+++ b/table-mdn/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<h1>Table Practice</h1>
-	<h2>HTML Table Basics</h2>
+	<h2>HTML Table Basics - article</h2>
 	<hr>
 	<h3>Dogs Table - table, tr, th, td</h3>
 	<table>
@@ -251,6 +251,31 @@
 		</tr>
 	</table>
 	<hr>
+
+	<h2>Styling tables - article</h2>
+	<h3>Bakery budget - thead, tbody, caption</h3>
+	<table>
+		<caption>
+			My bakery budget!!
+		</caption>
+
+		<thead>
+			<tr>
+				<th scope="col">Products</th>
+				<th scope="col">Price</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<th scope="row">Donuts</th>
+				<td>2$</td>
+			</tr>
+			<tr>
+				<th scope="row">Chocolate cake</th>
+				<td>5$</td>
+			</tr>
+		</tbody>
+	</table>
 <script id="__bs_script__">//<![CDATA[
     document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.26.14'><\/script>".replace("HOST", location.hostname));
 //]]></script>
