styling tables - article

--- a/table-mdn/index.html
+++ b/table-mdn/index.html
@@ -250,10 +250,8 @@
 			<td></td>
 		</tr>
 	</table>
-	<hr>
 
-	<h2>Styling tables - article</h2>
-	<h3>Bakery budget - thead, tbody, caption</h3>
+	<h2>Bakery budget - thead, tbody, tfoot, caption</h2>
 	<table>
 		<caption>
 			My bakery budget!!
@@ -275,10 +273,17 @@
 				<td>5$</td>
 			</tr>
 		</tbody>
+		<tfoot>
+			<tr>
+				<th scope="row">Total</th>
+				<th>7$</th>
+			</tr>
+		</tfoot>
 	</table>
-<script id="__bs_script__">//<![CDATA[
-    document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.26.14'><\/script>".replace("HOST", location.hostname));
-//]]></script>
+
+	<hr>
+
+	<a href="./styling-tables.html">styling tables - MDN</a>
 
 </body>
 </html>
