finished table styling project

--- a/table-mdn/styling-tables.html
+++ b/table-mdn/styling-tables.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Styling tables - article</title>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rock+Salt" type="text/css">
 	<link rel="stylesheet" href="./css/styling-tables.css">
 </head>
 <body>
@@ -36,7 +37,7 @@
 			<tr>
 				<th scope="row">The Damned</th>
 				<td>1976</td>
-				<td><10/td>
+				<td>10</td>
 				<td>Smash it up</td>
 			</tr>
 			<tr>
@@ -77,5 +78,6 @@
 		</tfoot>
 	</table>
 
-</body	>
+	<a href="../style-table-project.html">styling project</a>
+</body>
 </html>
