starting html table advanced article

--- a/table-mdn/index.html
+++ b/table-mdn/index.html
@@ -283,7 +283,7 @@
 
 	<hr>
 
-	<a href="./styling-tables.html">styling tables - MDN</a>
+	<a href="./styling-tables.html">Styling Tables - MDN</a>
 
 </body>
 </html>
