--- a/table-mdn/styling-tables.html
+++ b/table-mdn/styling-tables.html
@@ -77,7 +77,10 @@
 			<td colspan="2">77</td>
 		</tfoot>
 	</table>
+	<ul>
+		<li><a href="../style-table-project.html">Styling Project</a></li>
+		<li><a href="../advanced-table-accessibility.html">Advanced Table - MDN</a></li>
+	</ul>
 
-	<a href="../style-table-project.html">styling project</a>
 </body>
 </html>
