Finished HTML Advanced Tables article. Its project is in development

--- a/table-mdn/advanced-table-accessibility.html
+++ b/table-mdn/advanced-table-accessibility.html
@@ -9,8 +9,14 @@
 <body>
 	
 	<table>
+		<colgroup>
+			<col>
+			<col style="width: 150px">
+			<col>
+			<col>
+		</colgroup>
 		<caption>Female Mathematicians who have changed the world.</caption>
-		<thead>
+		<thead class="thead-own">
 			<tr>
 				<th scope="col" class="text-al">Name</th>
 				<th scope="col" class="num-al">Lifetime</th>
@@ -18,7 +24,7 @@
 				<th scope="col" class="text-al">What was her impact</th>
 			</tr>
 		</thead>
-		<tbody>
+		<tbody class="tbody-own">
 			<tr>
 				<th class="text-al" scope="row">Maryam Mirzakhani</td>
 				<td class="num-al">1977 - 2017</td>
@@ -76,13 +82,65 @@
 				<td class="text-al">Despite success in her early acting career, Mayim still decided to study neuroscience at university because she had a passion for the subject. She believes strongly in the involvement of women in STEM subjects and has spoken at events on the topic encouraging girls to pursue these disciplines. She also plays the bass and trumpet! </td>
 			</tr>
 		</tbody>
-		<tfoot>
+		<tfoot class="tfoot-own">
 			<tr>
-				<th>Source</th>
+				<th colspan="3">Source</th>
 				<td>www.thirdspacelearning.com</td>
 			</tr>
 		</tfoot>
 	</table>
 
+	<hr>
+	<table class="mdn">
+		<caption>How i chose to spend my money</caption>
+
+		<thead>
+			<tr>
+				<th scope="col">Purcharse</th>
+				<th scope="col">Location</th>
+				<th scope="col">Date</th>
+				<th scope="col">Evaluation</th>
+				<th scope="col">Cost (€)</th>
+			</tr>
+		</thead>
+
+		<tbody>
+			<tr>
+				<td>Haircut</td>
+				<td>Hairdresser</td>
+				<td>12/09</td>
+				<td>Great idea</td>
+				<td>30</td>
+			</tr>
+			<tr>
+				<td>Lasagna</td>
+				<td>Restaurant</td>
+				<td>12/09</td>
+				<td>Regrets</td>
+				<td>18</td>
+			</tr>
+			<tr>
+				<td>Shoes</td>
+				<td>Shoeshop</td>
+				<td>13/09</td>
+				<td>Big regrets</td>
+				<td>65</td>
+			</tr>
+			<tr>
+				<td>Toothpaste</td>
+				<td>Supermarket</td>
+				<td>13/09</td>
+				<td>Good</td>
+				<td>5</td>
+			</tr>
+		</tbody>
+
+		<tfoot>
+			<tr>
+				<th scope="row" colspan="4">SUM</th>
+				<th>118</th>
+			</tr>
+		</tfoot>
+	</table>
 </body>
 </html>
