Finished Advanced Table Project

--- a/table-mdn/advanced-table-accessibility.html
+++ b/table-mdn/advanced-table-accessibility.html
@@ -142,5 +142,8 @@
 			</tr>
 		</tfoot>
 	</table>
+	<ul>
+		<a href="./advanced-table-project.html">Advanced Table - Project</a>
+	</ul>
 </body>
 </html>
