Finished Advanced Table Project

--- a/table-mdn/advanced-table-project.html
+++ b/table-mdn/advanced-table-project.html
@@ -23,7 +23,7 @@
 
 		<tbody>
 			<tr>
-				<th scope="rowgroup" rowspan="13" id="scope">South America</th>
+				<th scope="rowgroup" rowspan="13" class="scope">South America</th>
 				<th scope="row">Argentina</th>
 				<td>Buenos Aires</td>
 			</tr>
