final project finished

--- a/table-mdn/index.html
+++ b/table-mdn/index.html
@@ -282,8 +282,13 @@
 	</table>
 
 	<hr>
-
-	<a href="./styling-tables.html">Styling Tables - MDN</a>
-
+	<ul>
+		<li>
+			<a href="./styling-tables.html">Styling Tables - MDN</a>
+		</li>
+		<li>
+			<a href="./final-project.html">Final Project - MDN</a>
+		</li>
+	</ul>
 </body>
 </html>
